# ElgatoBar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
ElgatoBar/: AppState.swift  ContentView.swift  ElgatoBarApp.swift  Item.swift
ElgatoBar.xcodeproj/: project.pbxproj
ElgatoBar.xcodeproj/xcuserdata/ttiimmaahh.xcuserdatad/xcschemes/: xcschememanagement.plist
ElgatoBar/Assets.xcassets/AppIcon.appiconset/: Contents.json
ElgatoBar/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
ElgatoBar/Models/: Models.swift
ElgatoBar/Services/: DiscoveryService.swift  HotkeyManager.swift  LightClient.swift  NetworkScanner.swift  PersistenceManager.swift  ShortcutNames.swift
ElgatoBar/Views/: ErrorToastView.swift  LightRowView.swift  MenuBarView.swift  SettingsView.swift
ElgatoBarTests/: ElgatoBarTests.swift
ElgatoBarUITests/: ElgatoBarUITests.swift  ElgatoBarUITestsLaunchTests.swift
Postman/: ElgatoKeyLight.postman_collection.json
docs/architecture/: repository-layout.md
linux/: README.md  run-elgatobar
linux/crates/elgatobar-cli/: Cargo.toml
linux/crates/elgatobar-cli/src/: main.rs
linux/crates/elgatobar-cli/tests/: cli.rs
linux/crates/elgatobar-core/: Cargo.toml
linux/crates/elgatobar-core/src/: controller.rs  domain.rs  http.rs  interchange.rs  lib.rs  manager.rs  transport.rs
linux/crates/elgatobar-core/tests/: controller_contract.rs  domain_contract.rs  http_contract.rs  manager_contract.rs
linux/crates/elgatobar-daemon/: Cargo.toml
linux/crates/elgatobar-daemon/src/: lib.rs  main.rs  storage.rs
linux/crates/elgatobar-daemon/tests/: dbus_contract.rs
linux/crates/elgatobar-dbus/: Cargo.toml
linux/crates/elgatobar-dbus/src/: lib.rs
linux/crates/elgatobar-ui/: Cargo.toml
linux/crates/elgatobar-ui/src/: client.rs  lib.rs  main.rs  model.rs
linux/crates/elgatobar-ui/tests/: dbus_adapter.rs  model.rs
linux/crates/elgatobar-waybar/: Cargo.toml
linux/crates/elgatobar-waybar/src/: lib.rs  main.rs
linux/crates/elgatobar-waybar/tests/: cli.rs  dbus_adapter.rs  model.rs
linux/docs/: mdns-discovery.md
linux/systemd/: elgatobar.service
linux/waybar/: config.jsonc  style.css
shared/: README.md  feature-parity.md
shared/api-fixtures/: accessory-info-response.json  interchange-v1.json  lights-empty-response.json  lights-put-request.json  lights-put-response.json  lights-response.json
shared/protocol/: elgato-http-v1.md  elgatobar-dbus-v1.md  elgatobar-linux-storage-v1.md
shared/schemas/: elgatobar-interchange-v1.schema.json  elgatobar-linux-devices-v1.schema.json  elgatobar-linux-settings-v1.schema.json
