[workspace]
members = [
    "linux/crates/elgatobar-core",
    "linux/crates/elgatobar-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"
repository = "https://github.com/ttiimmaahh/ElgatoBar"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
