[workspace]
members = [
    "linux/crates/elgatobar-core",
    "linux/crates/elgatobar-dbus",
    "linux/crates/elgatobar-cli",
    "linux/crates/elgatobar-daemon",
    "linux/crates/elgatobar-ui",
    "linux/crates/elgatobar-waybar",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"
repository = "https://github.com/ttiimmaahh/ElgatoBar"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zbus = { version = "5.18", default-features = false, features = ["tokio"] }
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
