[package]
name = "elgatobar-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "elgatobar"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elgatobar-core = { path = "../elgatobar-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tokio = { workspace = true, features = ["io-util", "net"] }
wiremock = "0.6"
