[package]
name = "elgatobar-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "elgatobar-daemon"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elgatobar-core = { path = "../elgatobar-core" }
elgatobar-dbus = { path = "../elgatobar-dbus" }
tokio.workspace = true
zbus.workspace = true

[dev-dependencies]
futures-util = "0.3"
serde_json.workspace = true
wiremock = "0.6"
