[package]
name = "elgatobar-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
elgatobar-core = { path = "../elgatobar-core" }
elgatobar-dbus = { path = "../elgatobar-dbus" }
futures-util.workspace = true
gtk.workspace = true
libadwaita = { workspace = true, features = ["v1_5"] }
tokio.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile = "3"
