[package]
name = "elgatobar-waybar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "elgatobar-waybar"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elgatobar-dbus = { path = "../elgatobar-dbus" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zbus.workspace = true

[dev-dependencies]
tokio.workspace = true
